testsuite/positive/bug-1188.n
public class A
{
  public virtual f['t](_x : 't) : void
  {
    System.Console.WriteLine("A.f['t]");
  }
}

public class B : A
{
  public override f['t](x : 't) : void
  {
    base.f(x);
  }

  public g['t](x : 't) : void
  {
    f(x);
  }
}

module Program
{
  Main() : void
  {
    B().g(3);
  }
}

/*
BEGIN-OUTPUT
A.f['t]
END-OUTPUT
*/
