testsuite/negative/array2.n
class Bug880 {
  class A {
    public f () : void {
    }
  }
  bar () : void {
    def g = x => array[x.f ()]; // E: array element type cannot be void
    _ = g (A ())
  }
}